--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ img, h1 {
   margin-right: auto;
 }
 
-.page-header {
+header {
   border-bottom: 4px solid #bcbbbb;
   margin-left: 1px;
   margin-right: 1px;
@@ -64,6 +64,9 @@ img, h1 {
   h4 {
     font-size: 28px;
   }
+  .logo {
+    padding: 0;
+  }
 }
 
 @media screen and (min-width: 800px) {
@@ -78,5 +81,8 @@ img, h1 {
   }
   h4 {
     font-size: 42px;
+  }
+  .logo {
+    padding: 2em;
   }
 }
